venndb-usage/tests/fails/any_filter_no_trait_impl.stderr
error[E0277]: the trait bound `Department: venndb::Any` is not satisfied
 --> tests/fails/any_filter_no_trait_impl.rs:3:17
  |
3 | #[derive(Debug, VennDB)]
  |                 ^^^^^^ the trait `venndb::Any` is not implemented for `Department`
  |
  = help: the following other types implement trait `venndb::Any`:
            Box<T>
            Rc<T>
            Arc<T>
            Option<T>
            &T
  = note: this error originates in the derive macro `VennDB` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Department: venndb::Any` is not satisfied
 --> tests/fails/any_filter_no_trait_impl.rs:3:17
  |
3 | #[derive(Debug, VennDB)]
  |                 ^^^^^^ the trait `venndb::Any` is not implemented for `Department`, which is required by `&Department: venndb::Any`
  |
  = help: the following other types implement trait `venndb::Any`:
            Box<T>
            Rc<T>
            Arc<T>
            Option<T>
            &T
  = note: required for `&Department` to implement `venndb::Any`
  = note: this error originates in the derive macro `VennDB` (in Nightly builds, run with -Z macro-backtrace for more info)
